--- a/floating.html
+++ b/floating.html
@@ -19,7 +19,7 @@
 <script src="https://cdn.jwplayer.com/libraries/ItMW7Ep3.js"></script>
 <script>
 var playerInstance = jwplayer("player").setup({
-  "file": "https://dl27gtzv7mq2q.cloudfront.net/streams/20210429/lksamsung-4004d314a9924dcbad71e2fef5679a37/c6cef3f83c3741979e4fa79285a5d8e1_VOD.m3u8",
+  "file": "https://d2l8gjzronllm0.cloudfront.net/broadcast/hotsauce/vkhotsauce-8aa05321925e4cd3be11570795b0ead4/vods/da326977-989d-4ec8-a78f-489db5c12d40/hls/da326977-989d-4ec8-a78f-489db5c12d40_VOD.m3u8",
   "height": 180,
   "width": 320,
   "autostart": "true",
