--- a/ldfs.html
+++ b/ldfs.html
@@ -15,7 +15,9 @@ video {
 </video>
 
 네이버쇼핑라이브 스타일
-<video preload="auto" autoplay="" playsinline="" webkit-playsinline="" x5-playsinline="" src="https://d2l8gjzronllm0.cloudfront.net/broadcast/ldfs/vkldfs-a4afaf501000403193034ab9918304dc/vods/7b2568d1-657e-416b-bc81-f5d62d5c1440/hls/7b2568d1-657e-416b-bc81-f5d62d5c1440_VOD_preview_VOD.mp4" style="width: 100%; height: 100%;"></video>
+<video preload="auto" autoplay="" playsinline="" webkit-playsinline="" x5-playsinline="" style="width: 100%; height: 100%;">
+	<source src="//d2l8gjzronllm0.cloudfront.net/broadcast/ldfs/vkldfs-a4afaf501000403193034ab9918304dc/vods/7b2568d1-657e-416b-bc81-f5d62d5c1440/hls/7b2568d1-657e-416b-bc81-f5d62d5c1440_VOD_preview_VOD.mp4">
+</video>
 
 소스라이브 모아보기 템플릿 스타일
 <video playsinline="" autoplay="" src="https://d2l8gjzronllm0.cloudfront.net/broadcast/ldfs/vkldfs-a4afaf501000403193034ab9918304dc/vods/7b2568d1-657e-416b-bc81-f5d62d5c1440/hls/7b2568d1-657e-416b-bc81-f5d62d5c1440_VOD_preview_VOD.mp4"></video> 
