--- a/ldfs.html
+++ b/ldfs.html
@@ -6,6 +6,8 @@ video {
 </style>
 </head>
 
+기본 비디오 태그 아이폰 재생 테스트 샘플 페이지
+
 <video autoplay muted loop playsinline preload="metadata">
 	<source src="//d2l8gjzronllm0.cloudfront.net/broadcast/ldfs/vkldfs-9da8016b208141fdbfecfd1a4ab2ab86/vods/1581b369-89bd-442e-b49b-b7cb3bf05eac/hls/1581b369-89bd-442e-b49b-b7cb3bf05eac_VOD_preview_VOD.mp4">
 </video>
@@ -15,9 +17,9 @@ video {
 </video>
 
 네이버쇼핑라이브 스타일
-<video preload="auto" muted autoplay="" playsinline="" webkit-playsinline="" x5-playsinline="" style="width: 100%; height: 100%;">
+<video preload="auto" muted loop autoplay="" playsinline="" webkit-playsinline="" x5-playsinline="" style="width: 100%; height: 100%;">
 	<source src="//d2l8gjzronllm0.cloudfront.net/broadcast/ldfs/vkldfs-a4afaf501000403193034ab9918304dc/vods/7b2568d1-657e-416b-bc81-f5d62d5c1440/hls/7b2568d1-657e-416b-bc81-f5d62d5c1440_VOD_preview_VOD.mp4">
 </video>
 
 소스라이브 모아보기 템플릿 스타일
-<video playsinline="" muted autoplay="" src="https://d2l8gjzronllm0.cloudfront.net/broadcast/ldfs/vkldfs-a4afaf501000403193034ab9918304dc/vods/7b2568d1-657e-416b-bc81-f5d62d5c1440/hls/7b2568d1-657e-416b-bc81-f5d62d5c1440_VOD_preview_VOD.mp4"></video> 
+<video playsinline="" muted loop autoplay="" src="https://d2l8gjzronllm0.cloudfront.net/broadcast/ldfs/vkldfs-a4afaf501000403193034ab9918304dc/vods/7b2568d1-657e-416b-bc81-f5d62d5c1440/hls/7b2568d1-657e-416b-bc81-f5d62d5c1440_VOD_preview_VOD.mp4"></video> 
