--- a/floating.html
+++ b/floating.html
@@ -10,6 +10,9 @@
 }
 .jw-icon-fullscreen {
 	display: none !important;
+}	
+.jw-icon.jw-icon-inline.jw-button-color.jw-reset.jw-icon-pip {
+	display: none !important;
 }
 
 </style>
