--- a/sample_mobile.html
+++ b/sample_mobile.html
@@ -58,7 +58,7 @@ $(function() {
 	// JW Player 표출
 	G_PlayerInstance = jwplayer("player");
 	G_PlayerInstance.setup({
-	  	"file" : file,
+	  	"file" : "https://content.jwplatform.com/manifests/yp34SRmf.m3u8",
 	  	"key" : streamKey,				// 영상 고유키 값
 	  	"height" : hei					// 영상 높이
 	}).setConfig({
